<resources>
    <string name="app_name">Data Transfer Calculator</string>
    <string name="datasize">Datasize:</string>
    <string name="transfer_rate">Transfer Rate:</string>
    <string name="transferring_0_mb_at_0_mbps_will_take">0 Megabytes at 0 Megabytes p/s will take</string>
    <string name="_0_hours_0_minutes_0_Seconds">0 Hours 0 Minutes 0 Seconds</string>
    <string name="calculate_time">Calculate Time</string>

    <string-array name="datasizes_short">
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
        <item>TB</item>
    </string-array>

    <string-array name="transfer_rates_short">
        <item>KBps</item>
        <item>MBps</item>
        <item>GBps</item>
    </string-array>

    <string-array name="datasizes_long">
        <item>Kilobytes</item>
        <item>Megabytes</item>
        <item>Gigabytes</item>
        <item>Terabytes</item>
    </string-array>

    <string-array name="transfer_rates_long">
        <item>Kilobytes p/s</item>
        <item>Megabytes p/s</item>
        <item>Gigabytes p/s</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">settings</string>
    <string name="shorthand_datasize_notation">Shorthand Datasize Notation</string>
    <string name="precision_mode">Precision Mode</string>
</resources>